LuckyStackWorker - RELEASE NOTES
================================
30/7/2022 minor release 2.2.1:
- Some layout fixes

29/7/2022 minor release 2.2.0:
- Added ROI dimension indicator
- Improved startup time
- Replaced card layout with tabs to reduce GUI size
- Fixed issues with crop selection

17/7/2022 minor release 2.1.0:
- Added new sliders to control contrast, brightness & darken background
- Fixed spinner not always showing when processing large images
- Replaced initial exposure correction problem of ImageJ with correct handling of exposure (exact match with original)
- Fixed Firecapture target not being recognized if filename does not start with it

1/7/2022: revision release 2.0.1
- Fixed issue with cropping selection using the wrong mouse picker after deselecting the ROI.
- Using 2 decimals for saturation
- Fixed minor layout alignment issue.

30/6/2022: major release 2.0.0
- Added a new panel for denoising. Added 3 new sliders for controlling the sigma, radius and number of iterations of the sigma filter denoising.
- Added saturation control slider
- Added cropping function
- Added Mouse hand control to scroll through images larger than the window size
- Added an automatic new version notification
- More compact UI layout design
- Added hover on buttons
- Replaced slider thumbs with immediate indicator value on the right
- Added spinner when processing large images

25/5/2022 revision release 1.4.1:
- Fixed some minor layout issues.

21/5/2022 minor release 1.4.0:
- Added profile saving in a yaml file along with the TIF whenever profile is applied.
- Profile is saved to a yaml file also for every reference image that is saved.
- Profile is now loaded first from yaml file if found. If not it will load it from the database.
- Added a Load Profile button to allow selecting the profile from earlier saved yaml file.

26/3/2022 revision release 1.3.3: