@@ -40,107 +40,108 @@ import nl.wilcokas.luckystackworker.util.Util;
 @Slf4j
 public class ProfileController {
 
-	@Autowired
-	private ProfileRepository profileRepository;
+    @Autowired
+    private ProfileRepository profileRepository;
 
-	@Autowired
-	private ReferenceImageService referenceImageService;
+    @Autowired
+    private ReferenceImageService referenceImageService;
 
-	@Autowired
-	private ProfileService profileService;
+    @Autowired
+    private ProfileService profileService;
 
-	@GetMapping
-	public List<Profile> getProfiles() {
-		log.info("getProfiles called");
-		return StreamSupport.stream(profileRepository.findAll().spliterator(), false)
-				.collect(Collectors.toList());
-	}
+    @GetMapping
+    public List<Profile> getProfiles() {
+        log.info("getProfiles called");
+        return StreamSupport.stream(profileRepository.findAll().spliterator(), false)
+                .collect(Collectors.toList());
+    }
 
-	@GetMapping("/selected")
-	public Profile getSelectedProfile() {
-		log.info("getSelectedProfile called");
-		Profile profile = new Profile();
-		String profileName = LuckyStackWorkerContext.getSelectedProfile();
-		if (profileName != null) {
-			profile = profileRepository.findByName(profileName)
-					.orElseThrow(() -> new ResourceNotFoundException(String.format("Unknown profile %s", profileName)));
-		}
+    @GetMapping("/selected")
+    public Profile getSelectedProfile() {
+        log.info("getSelectedProfile called");
+        Profile profile = new Profile();
+        String profileName = LuckyStackWorkerContext.getSelectedProfile();
+        if (profileName != null) {
+            profile = profileRepository.findByName(profileName)
+                    .orElseThrow(() -> new ResourceNotFoundException(String.format("Unknown profile %s", profileName)));
+        }
 
-		// This is not persisted, so get state from ref.service
-		profile.setRootFolder(referenceImageService.getSettings().getRootFolder());
-		profile.setLargeImage(referenceImageService.isLargeImage());
+        // This is not persisted, so get state from ref.service
+        profile.setRootFolder(referenceImageService.getSettings().getRootFolder());
+        profile.setLargeImage(referenceImageService.isLargeImage());
 
-		return profile;
-	}
+        return profile;
+    }
 
-	@GetMapping("/{profile}")
-	public Profile getProfile(@PathVariable(value = "profile") String profileName) {
-		log.info("getProfile called with profile {}", profileName);
-		Profile profile = profileRepository.findByName(profileName)
-				.orElseThrow(() -> new ResourceNotFoundException(String.format("Unknown profile %s", profileName)));
-		return profile;
-	}
+    @GetMapping("/{profile}")
+    public Profile getProfile(@PathVariable(value = "profile") String profileName) {
+        log.info("getProfile called with profile {}", profileName);
+        Profile profile = profileRepository.findByName(profileName)
+                .orElseThrow(() -> new ResourceNotFoundException(String.format("Unknown profile %s", profileName)));
+        return profile;
+    }
 
-	@GetMapping("/load")
-	public Profile loadProfile() {
-		log.info("loadProfile called");
-		JFrame frame = referenceImageService.getParentFrame();
-		JFileChooser jfc = referenceImageService
-				.getJFileChooser(LuckyStackWorkerContext.getWorkerProperties().get("inputFolder"));
-		FileNameExtensionFilter filter = new FileNameExtensionFilter("YAML", "yaml");
-		jfc.setFileFilter(filter);
-		int returnValue = jfc.showOpenDialog(frame);
-		frame.dispose();
-		if (returnValue == JFileChooser.APPROVE_OPTION) {
-			File selectedFile = jfc.getSelectedFile();
-			String selectedFilePath = selectedFile.getAbsolutePath();
-			String fileNameNoExt = Util.getFilename(selectedFilePath)[0];
-			Profile profile = Util.readProfile(fileNameNoExt);
-			if (profile != null) {
-				updateProfile(profile);
-				return profile;
-			}
-		}
-		return null;
-	}
+    @GetMapping("/load")
+    public Profile loadProfile() {
+        log.info("loadProfile called");
+        JFrame frame = referenceImageService.getParentFrame();
+        JFileChooser jfc = referenceImageService
+                .getJFileChooser(LuckyStackWorkerContext.getWorkerProperties().get("inputFolder"));
+        FileNameExtensionFilter filter = new FileNameExtensionFilter("YAML", "yaml");
+        jfc.setFileFilter(filter);
+        int returnValue = jfc.showOpenDialog(frame);
+        frame.dispose();
+        if (returnValue == JFileChooser.APPROVE_OPTION) {
+            File selectedFile = jfc.getSelectedFile();
+            String selectedFilePath = selectedFile.getAbsolutePath();
+            String fileNameNoExt = Util.getFilename(selectedFilePath)[0];
+            Profile profile = Util.readProfile(fileNameNoExt);
+            if (profile != null) {
+                profile.setLargeImage(referenceImageService.isLargeImage());
+                updateProfile(profile);
+                return profile;
+            }
+        }
+        return null;
+    }
 
-	@PutMapping
-	public ResponseEntity<String> updateProfile(@RequestBody Profile profile) {
-		profileService.updateProfile(profile);
-		referenceImageService.updateProcessing(profile);
-		return new ResponseEntity<>(HttpStatus.OK);
-	}
+    @PutMapping
+    public ResponseEntity<String> updateProfile(@RequestBody Profile profile) {
+        profileService.updateProfile(profile);
+        referenceImageService.updateProcessing(profile);
+        return new ResponseEntity<>(HttpStatus.OK);
+    }
 
-	@PutMapping("/apply")
-	public void applyProfile(@RequestBody Profile profile) throws IOException {
-		String profileName = profile.getName();
-		if (profileName != null) {
-			LuckyStackWorkerContext.statusUpdate(Constants.STATUS_WORKING);
-			LuckyStackWorkerContext.updateWorkerForProfile(profile);
-			LuckyStackWorkerContext.setSelectedRoi(referenceImageService.getFinalResultImage().getRoi());
-			LuckyStackWorkerContext.setActiveProfile(profileName);
-			referenceImageService.writeProfile();
-		} else {
-			log.warn("Attempt to apply profile while nothing was selected");
-			LuckyStackWorkerContext.statusUpdate(Constants.STATUS_IDLE);
-		}
-	}
+    @PutMapping("/apply")
+    public void applyProfile(@RequestBody Profile profile) throws IOException {
+        String profileName = profile.getName();
+        if (profileName != null) {
+            LuckyStackWorkerContext.statusUpdate(Constants.STATUS_WORKING);
+            LuckyStackWorkerContext.updateWorkerForProfile(profile);
+            LuckyStackWorkerContext.setSelectedRoi(referenceImageService.getFinalResultImage().getRoi());
+            LuckyStackWorkerContext.setActiveProfile(profileName);
+            referenceImageService.writeProfile();
+        } else {
+            log.warn("Attempt to apply profile while nothing was selected");
+            LuckyStackWorkerContext.statusUpdate(Constants.STATUS_IDLE);
+        }
+    }
 
-	@GetMapping("/status")
-	public StatusUpdate getStatus() {
-		log.info("getStatus called");
-		return LuckyStackWorkerContext.getStatus();
-	}
+    @GetMapping("/status")
+    public StatusUpdate getStatus() {
+        log.info("getStatus called");
+        return LuckyStackWorkerContext.getStatus();
+    }
 
-	@GetMapping("/version")
-	public Version getLatestVersion() {
-		log.info("getLatestVersion called");
-		return referenceImageService.getLatestVersion(LocalDateTime.now());
-	}
+    @GetMapping("/version")
+    public Version getLatestVersion() {
+        log.info("getLatestVersion called");
+        return referenceImageService.getLatestVersion(LocalDateTime.now());
+    }
 
-	@PutMapping("/exit")
-	public void exit() {
-		log.info("Exit called, ending application");
-		System.exit(0);
-	}
+    @PutMapping("/exit")
+    public void exit() {
+        log.info("Exit called, ending application");
+        System.exit(0);
+    }
 }
