@@ -1,6 +1,10 @@
 LuckyStackWorker - RELEASE NOTES
 ================================
-30/7/2022 minor release 2.2.1:
+04/09/2022 revision release 2.2.2:
+- Fixed spinner no longer showing for large images when load profile was selected.
+- Upgraded to the latest jdk 17 and angular 14.
+
+30/7/2022 revision release 2.2.1:
 - Some layout fixes
 
 29/7/2022 minor release 2.2.0:
